Closed
Bug 39192
Opened 26 years ago
Closed 19 years ago
Drag+click (select) interpreted as double-click [MAC]
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P1)
Tracking
()
RESOLVED
FIXED
Future
People
(Reporter: jruderman, Unassigned)
References
Details
(Keywords: platform-parity)
Attachments
(2 files)
|
2.27 KB,
patch
|
Details | Diff | Splinter Review | |
|
3.06 KB,
patch
|
Details | Diff | Splinter Review |
one two three four
1. Drag from the middle of the word one to the middle of the word three
2. Let go of the mouse button and quickly click it down again
Expected result: selection cleared
Actual result: the word "three" is selected
Comment 1•26 years ago
|
||
Could this be the same problem under the hood as bug 37151, "radio and
checkboxes process on mouseup regardless of where mousedown originated", M17,
ASSIGNED?
Comment 2•26 years ago
|
||
this is a result of the new multi-click code. Reassigning.
Assignee: joki → rods
Comment 3•26 years ago
|
||
Marking as P1, so it is one of the first ones I look at when I can start pulling
bugs off Future.
The issue is knowing that a drag was down and clearing the double click time.
This bug has been marked "future" because the original netscape engineer working
on this is over-burdened. If you feel this is an error, that you or another
known resource will be working on this bug,or if it blocks your work in some way
-- please attach your concern to the bug for reconsideration.
Status: NEW → ASSIGNED
Priority: P3 → P1
Target Milestone: --- → Future
Comment 4•26 years ago
|
||
Mass update: changing qacontact to ckritzer@netscape.com
QA Contact: janc → ckritzer
| Reporter | ||
Comment 5•25 years ago
|
||
The "opposite" bug has been filed as bug 53144. In that bug, you click first
and then drag. In this bug, you drag first and then click.
Hmmm...this seems terribly annoying but not enough for RTM nomination. Sorry for
the spam. -d
Comment 8•25 years ago
|
||
Rod, now that it's a new cycle, can we unfuture this (per your 6/22 comment)?
Comment 9•25 years ago
|
||
Fixed it, just needed to clear the click counter on mouse moves.
Summary: Drag+click interpreted as double-click → [FIX]Drag+click interpreted as double-click
Whiteboard: Fix in hand
Comment 10•25 years ago
|
||
Updated•25 years ago
|
Target Milestone: Future → ---
Comment 11•25 years ago
|
||
Comment 12•25 years ago
|
||
Latest patch looks good.
r=kmcclusk@netscape.com
| Reporter | ||
Comment 13•25 years ago
|
||
Rods, does the patch happen to fix bug 47966 as well?
Comment 14•25 years ago
|
||
*** Bug 47966 has been marked as a duplicate of this bug. ***
Comment 15•25 years ago
|
||
Jesse thanks for pointing out Bug 47966, it is a dup of this bug and is now
fixed also. Comment from my checkin:
The click counter needs to be zeroed during a drag so a click that happens
within the threshold of time between the end click of the drag and the beginning
click of the single click isn't counted like a double click.
The time in between the two which is system dependent and quite long.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 16•25 years ago
|
||
Mac issue also, confirmed in Mac 01-18-15. Not fixed there.
REOPENING.
Status: RESOLVED → REOPENED
OS: Windows 98 → All
Hardware: PC → All
Resolution: FIXED → ---
Comment 17•25 years ago
|
||
[Clearing fix in hand status, since the fix was checked in but didn't fix it.]
This bug is still happening on Mac OS, what about Windows and Linux?
Keywords: qawanted
Summary: [FIX]Drag+click interpreted as double-click → Drag+click interpreted as double-click
Whiteboard: Fix in hand
Comment 18•25 years ago
|
||
Reassigning QA Contact for all open and unverified bugs previously under Lorca's
care to Gerardo as per phone conversation this morning.
QA Contact: lorca → gerardok
Comment 19•25 years ago
|
||
Setting platform to Mac and reassigning to waqar to take a look
Assignee: rods → waqar
Status: REOPENED → NEW
Hardware: All → Macintosh
Updated•24 years ago
|
QA Contact: madhur → rakeshmishra
Updated•23 years ago
|
QA Contact: rakeshmishra → trix
Comment 23•23 years ago
|
||
2 years later...
This bug still affects Mac OSX release 1.2.1, presumably all.
The severity rating could probably afford to be dialed down a notch or two.
Comment 24•23 years ago
|
||
Should this still have the qawanted keyword?
Comment 25•21 years ago
|
||
Is this still a problem on Mac with recent builds (1.7 or 1.8b)? It works fine
on linux.
| Reporter | ||
Comment 26•21 years ago
|
||
WFM on Windows - Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2)
Gecko/20050521 Firefox/1.0+
Comment 27•21 years ago
|
||
I see this on a recent mac nightly (suite), so this is still an issue on mac.
Comment 28•20 years ago
|
||
(Rod in reply to comment #15)
> Jesse thanks for pointing out Bug 47966, it is a dup of this bug and is now
> fixed also. Comment from my checkin:
>
> The click counter needs to be zeroed during a drag so a click that happens
> within the threshold of time between the end click of the drag and the beginning
> click of the single click isn't counted like a double click.
might help to know which bug and checkin that is.
bug 91693 related?
Severity: normal → major
Keywords: pp
OS: All → MacOS X
Summary: Drag+click interpreted as double-click → Drag+click (select) interpreted as double-click [MAC]
Comment 29•19 years ago
|
||
Kartsen, do you see this and bug 91693?
Comment 30•19 years ago
|
||
This is WFM, but I've got no real mouse, just a touchpad (PowerBook G4), so that doesn't count probably.
Comment 31•19 years ago
|
||
Andrew? stefanh?
Comment 32•19 years ago
|
||
This worksforme on trunk (seamonkey, 10.3.9), but not on 1.8 branch.
Comment 33•19 years ago
|
||
This was fixed on trunk between 2006-09-28 and 2006-09-29, almost certainly due to bug 326469 (enabling cocoa).
Updated•7 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•