fixing drag+click == double click. The click counter needs to be zeroed during a drag so a click that happens within the threshold of time between the end click of the drag and the beginning click of the single click isn't counted like a double click. The time in between the two which is system dependent and quite long. b=kmcclusk sr=buster Bug 39192 and possibly Bug 47966